--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+<head id="head">
   <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'GA_TRACKING_ID');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="description de DEM GROUP">
-    <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
     <title>SERIVORE</title>
-    <head id = "head"> 
       <ol>
       <li>
         <form action ="/confirm" method="GET"><button type ="submit">Delete Account</button>
@@ -32,13 +23,9 @@
     <button type="submit" ><em>Modifier profil</em></button>
     </form>
     </head>
-</head>
  <body>
-            <header>
-              <titl>Serivore!</titl>
-            </header>
             
-            <div id="banniere_image" role="bannière">
+            <div id="banniere_image" role="banner">
                 
             </div>
             <nav>
@@ -47,7 +34,7 @@
                           <li><a href="/categoriename">Catégorie</a></li>
                     </ul>
                 </nav>
-                <section id = "bloc1" role="about séries" >
+                <section id = "bloc1" role="navigation" >
                    <h1>Liste des séries</h1>
                     <form action="/Search" method = "get">
                         <input class="champ" type="search" name = "Search"  placeholder="Search..."/>
