--- a/views/categorie1.ejs
+++ b/views/categorie1.ejs
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'GA_TRACKING_ID');
+<head id="head">
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="description de DEM GROUP">
-    <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
-    <title>SERIVORE</title>
-    <head id = "head"> 
+    <title>SERIVORE</title> 
       <ol>
     <li>
         <form action ="/confirm" method="GET"><button type ="submit">Delete Account</button>
@@ -33,7 +24,7 @@
     </form>
     </head>
  <body>
-  <div id="banniere_image" role="bannière">
+  <div id="banniere_image" role="banner">
                 
   </div>
             <nav>
@@ -42,7 +33,7 @@
                           <li><a href="/categoriename">Catégorie</a></li>
                     </ul>
                 </nav>
-                <section id = "bloc1" role="about catégorie" >
+                <section id = "bloc1" role="navigation" >
                    <h1>Liste des séries par catégories</h1>
                     <div class="create">
                     <a href= "/addcategorie"><img src="https://www.cjoint.com/doc/20_05/JEmsu2lX8XV_plus.png" alt="ajouter serie">Create New Catégorie</a>
@@ -53,8 +44,8 @@
                           <th>Catégorie</th>
                           <th>Titre</th>
                           <th>Status</th>  
-                          <% for (let i = 0 ;  i < catégorie.length ; i++) { %>                                         
                       </tr>
+                          <% for (let i = 0 ;  i < catégorie.length ; i++) { %>                                         
 
                       <tr>
                         <td><%= catégorie[i].category %></td>
@@ -114,6 +105,7 @@
     .row{
         grid-template-columns: 0.5fr 0.5fr 0.5fr;
     }
+
 }
 ol, li{
   list-style-type: none;
@@ -167,7 +159,6 @@ header h1
     text-align:center;
     align-content: center;
 }
-
 
 #bloc1 h1{
     text-align: center;
@@ -281,7 +272,6 @@ span.accessible-hidden {
 .table, .table td, .table th{
   border : 1px solid;
   text-align: center;
-  width: 800px;
 }
 
 </style>
