--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -1,14 +1,17 @@
+<!DOCTYPE html> <html>
 <head>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!------ Include the above in your HEAD tag ---------->
+    <title>Login page</title>
     </head>
     
     
     <div class="sidenav">
              <div class="login-main-text">
-                <h2>Login Page</h2>
+                <h2>Login Pageeeee</h2>
                 <p>Login or register from here to access.</p>
              </div>
           </div>
@@ -18,11 +21,11 @@
                    <form action="auth_login" method="POST">
                       <div class="form-group">
                          <label>Email</label>
-                         <input type="text" name = "email" class="form-control" placeholder="Email">
+                         <input aria-label="email" type="text" name = "email" class="form-control" placeholder="Email">
                       </div>
                       <div class="form-group">
                          <label>Password</label>
-                         <input type="password" name = "password"  class="form-control" placeholder="Password">
+                         <input aria-label="password" type="password" name = "password"  class="form-control" placeholder="Password">
                       </div>
                       <button type="submit" class="btn btn-black">Login</button>
                    </form>
@@ -30,10 +33,11 @@
                 </div>
              </div>
           </div>
-    
+</html>
           <style>
       body {
         font-family: "Lato", sans-serif;
+        font-size: 25px;
       }
     .main-head{
         height: 150px;
@@ -55,6 +59,10 @@
     
     @media screen and (max-height: 450px) {
         .sidenav {padding-top: 15px;}
+        body {
+        font-family: "Lato", sans-serif;
+        font-size: 25px;
+      }
     }
     
     @media screen and (max-width: 450px) {
@@ -65,6 +73,10 @@
         .register-form{
             margin-top: 10%;
         }
+        body {
+        font-family: "Lato", sans-serif;
+        font-size: 25px;
+      }
     }
     
     @media screen and (min-width: 768px){
@@ -87,6 +99,10 @@
         .register-form{
             margin-top: 20%;
         }
+        body {
+        font-family: "Lato", sans-serif;
+        font-size: 25px;
+      }
     }
     
     
